# kgbench-loader

./: README.md  pyproject.toml  setup.py
docs/: index.md
experiments/: inspect-data.py  rgcn-dgl.py  rgcn.py
kgbench/: __init__.py  load.py  urls.py
