[project]
name = "kgbench-loader"
version = "0.1.0"
description = "Tool to easily load KGs graph"
authors= "Peter Bloem (Vrije Universiteit), Xander Wilcke (Vrije Universiteit), Lucas van Berkel, Victor de Boer (Vrije Universiteit)"
url = "https://kgbench.info"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "rdflib>=7.1.4",
    "scikit-image>=0.25.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wget>=3.2",
]
[tool.setuptools]
packages = ["kgbench"]